# img-store

./: .dockerignore  .env.example  .gitignore  API.md  AUTH_GUIDE.md  CMakeLists.txt  COOLIFY_STORAGE_FIX.md  DEPLOY.md  DEPLOYMENT.md  Dockerfile  FIX_PERMISSION_ISSUE.md  LICENSE  NAMED_IMAGES.md  PROJECT_STATUS.md  QUICKSTART.md  README.md  build.sh  docker-compose.yml  endpointExamples.md  named-image-examples.sh  nodejs-examples.js  package-lock.json  run.sh  setup-auth.sh  test-upload.js  test.sh  verify-storage.sh  verify.sh
.coolify/: config.json
include/: auth_middleware.h  crow_all.h  hash_utils.h  image_handler.h  server.h  storage_manager.h
src/: auth_middleware.cpp  hash_utils.cpp  image_handler.cpp  main.cpp  server.cpp  storage_manager.cpp
